Power control for Linux NetworX ICE Boxes
Added support for power control and status on Linux NetworkX ICE Boxes.
Note that the 'reset' command is tied to the node's hardware reset line
through the special ICE Box connector on the back of the node rather.
than a simple power cycle, so this needs to be connected.

--- a/tbsetup/GNUmakefile.in
+++ b/tbsetup/GNUmakefile.in
@@ -88,7 +88,7 @@ LIB_STUFF       = libtbsetup.pm exitonwarn.pm libtestbed.pm snmpit_intel.pm \
 		  power_mail.pm power_whol.pm Template.pm power_rmcp.pm \
 		  power_ilo.pm libvtop.pm libptop.pm libossetup.pm \
 		  power_ipmi.pm libosload_new.pm libosload_switch.pm \
-		  libossetup_switch.pm
+		  libossetup_switch.pm power_icebox.pm
 
 # These scripts installed setuid, with sudo. 
 SETUID_BIN_SCRIPTS   = node_reboot eventsys_control tarfiles_setup savelogs \
