Add a feeble version of the old as_string() method for DBI.
For now, map it to dump_results() which has butt-ugly output but is way
better than a "Can't locate object method" exception. Ultimately the few
uses of this method will get replaced by script specific printfs. I see
no reason for a general emulation of this method.

--- a/db/emdbi.pm.in
+++ b/db/emdbi.pm.in
@@ -192,6 +192,11 @@ sub fetchhash($)
     my $ref    = $self->fetchrow_hashref();
     return ($ref ? %$ref : ());
 }
+sub as_string($)
+{
+    my ($self) = @_;
+    $self->dump_results();
+}
 
 # Not supported so generate an error.
 sub dataseek($$)
