Handle new property_list.hpp location in boost
Have I mentioned that I hate it when library developers move their
headers around? Change the location of the property_list.hpp header
to a macro and add a new -DNEWER_BOOT define that swtiches this to
the newer location.

Not automatically detected yet; should be checked in configure.
(cherry picked from commit 2403b2644dbcc81f155df91bddeeecea60232a17)

--- a/assign/GNUmakefile.in
+++ b/assign/GNUmakefile.in
@@ -31,8 +31,9 @@ OBJS=parse_top.o parse_ptop.o assign.o pclass.o vclass.o score.o \
 LIBS+= -lm
 LDFLAGS+= -pipe -O3
 CXXFLAGS = -pipe -I/usr/local/include -ftemplate-depth-40
-# For OSX w/ fink
-CXXFLAGS += -I/sw/include
+# For OSX w/ macports
+CXXFLAGS += -I/opt/local/include
+LIBS += -L/opt/local/lib
 
 ifeq ($(HAVE_XERCES),yes)
 CXXFLAGS += -DWITH_XML
