If we change sshd_config, be sure to HUP sshd.

--- a/install/ops-install.in
+++ b/install/ops-install.in
@@ -1057,6 +1057,12 @@ Phase "ssh", "Allowing root ssh", sub {
 	AppendToFileFatal($SSHD_CONFIG,
 			  "PermitRootLogin yes",
 			  "Protocol 2,1");
+	# HUP the server so the changes take effect
+	if (-r "/var/run/sshd.pid") {
+	    my $dpid = `cat /var/run/sshd.pid`;
+	    chomp($dpid);
+	    ExecQuiet("kill -HUP $dpid");
+	}
     };
     Phase "dotssh", "Making root's .ssh directory", sub {
 	DoneIfExists("/root/.ssh");
