--- a/install/fs-install.in
+++ b/install/fs-install.in
@@ -2,7 +2,7 @@
 
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2003-2010 University of Utah and the Flux Group.
+# Copyright (c) 2003-2011 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -510,6 +510,12 @@ Phase "ssh", "Allowing root ssh", sub {
 	AppendToFileFatal($SSHD_CONFIG,
 			  "PermitRootLogin yes",
 			  "Protocol 2,1");
+	# HUP the server so the changes take effect
+	if (-r "/var/run/sshd.pid") {
+	    my $dpid = `cat /var/run/sshd.pid`;
+	    chomp($dpid);
+	    ExecQuiet("kill -HUP $dpid");
+	}
     };
     Phase "dotssh", "Making root's .ssh directory", sub {
 	DoneIfExists("/root/.ssh");
