If GetBootLog returns success (0) but there is no long, return a valid ref.
We set the passed in ref to "" in the case of no log (rather than leaving
it undefined).

--- a/db/Node.pm.in
+++ b/db/Node.pm.in
@@ -1806,11 +1806,13 @@ sub GetBootLog($$)
 		    "where node_id='$node_id'");
     return -1
 	if (! $query_result);
-    return 0
-	if (! $query_result->numrows);
 
-    my ($bootlog) = $query_result->fetchrow_array();
-    $$pref = $bootlog;
+    if ($query_result->numrows) {
+	my ($bootlog) = $query_result->fetchrow_array();
+	$$pref = $bootlog;
+    } else {
+	$$pref = "";
+    }
     return 0;
 }
 
