Optionally limit frisbee download and upload to a range of ports.
Primarily, so we can let frisbee upload to boss work through our firewall
without opening a gaping hole.

YOU MUST RECONFIGURE YOUR TREE before installing.

--- a/configure.in
+++ b/configure.in
@@ -195,6 +195,7 @@ AC_SUBST(SSLCERT_LOCALITY)
 AC_SUBST(SSLCERT_ORGNAME)
 AC_SUBST(FRISEBEEMCASTADDR)
 AC_SUBST(FRISEBEEMCASTPORT)
+AC_SUBST(FRISEBEENUMPORTS)
 AC_SUBST(WINSUPPORT)
 AC_SUBST(NSVERIFY)
 AC_SUBST(CVSSUPPORT)
@@ -296,6 +297,7 @@ BOSSEVENTPORT=16505
 UNIFIED_BOSS_AND_OPS=0
 FRISEBEEMCASTADDR="234.5.6"
 FRISEBEEMCASTPORT=3564
+FRISEBEENUMPORTS=0
 MIN_UNIX_UID=10000
 MIN_UNIX_GID=6000
 DELAYTHRESH=2
@@ -412,6 +414,7 @@ fi
 AC_DEFINE_UNQUOTED(BOSSEVENTPORT, "$BOSSEVENTPORT")
 AC_DEFINE_UNQUOTED(FRISEBEEMCASTADDR, "$FRISEBEEMCASTADDR")
 AC_DEFINE_UNQUOTED(FRISEBEEMCASTPORT, "$FRISEBEEMCASTPORT")
+AC_DEFINE_UNQUOTED(FRISEBEENUMPORTS, "$FRISEBEENUMPORTS")
 
 if test $OPSDBSUPPORT -eq 1; then
     AC_DEFINE_UNQUOTED(OPSDBSUPPORT, 1)
